--- a/Midia/Views/Base.lproj/Main.storyboard
+++ b/Midia/Views/Base.lproj/Main.storyboard
@@ -127,6 +127,7 @@
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="P0t-FK-HRN"/>
                         <segue destination="oad-Xa-uvc" kind="relationship" relationship="viewControllers" id="RhW-5V-iKr"/>
                         <segue destination="4kU-Pf-hQA" kind="relationship" relationship="viewControllers" id="DPz-9x-z6G"/>
+                        <segue destination="jtb-ZA-WpU" kind="relationship" relationship="viewControllers" id="pw7-Q8-e4y"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="m03-x9-ay3" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -223,6 +224,65 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kfT-jv-5PW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="983.20000000000005" y="706.59670164917543"/>
+        </scene>
+        <!--Settings View Controller-->
+        <scene sceneID="7EL-uF-iXl">
+            <objects>
+                <viewController id="jtb-ZA-WpU" customClass="SettingsViewController" customModule="Midia" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="AV7-Wr-LkI">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uLS-B3-Kku">
+                                <rect key="frame" x="16" y="54" width="343" height="33.666666666666657"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="28"/>
+                                <color key="textColor" red="0.1215686275" green="0.12941176469999999" blue="0.14117647059999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="2oD-PJ-rXU">
+                                <rect key="frame" x="16" y="103.66666666666669" width="343" height="120"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Do you want to change the search target?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Md-ZF-tvk">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="80"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
+                                        <color key="textColor" red="0.21176470589999999" green="0.21176470589999999" blue="0.21176470589999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="9JV-hy-gWr">
+                                        <rect key="frame" x="0.0" y="79.999999999999986" width="343" height="41"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="6yR-zi-5AU"/>
+                                        </constraints>
+                                        <segments>
+                                            <segment title="Books"/>
+                                            <segment title="Movies"/>
+                                        </segments>
+                                        <connections>
+                                            <action selector="didChangeMediaItemKind:" destination="jtb-ZA-WpU" eventType="valueChanged" id="TlR-zb-XAt"/>
+                                        </connections>
+                                    </segmentedControl>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="D0e-8F-GMh"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="uLS-B3-Kku" firstAttribute="top" secondItem="JIR-Ie-6Ku" secondAttribute="top" constant="10" id="3Mj-F0-RBJ"/>
+                            <constraint firstItem="JIR-Ie-6Ku" firstAttribute="trailing" secondItem="2oD-PJ-rXU" secondAttribute="trailing" constant="16" id="QbK-ja-9gP"/>
+                            <constraint firstItem="uLS-B3-Kku" firstAttribute="leading" secondItem="JIR-Ie-6Ku" secondAttribute="leading" constant="16" id="Vzy-hO-dp1"/>
+                            <constraint firstItem="2oD-PJ-rXU" firstAttribute="leading" secondItem="JIR-Ie-6Ku" secondAttribute="leading" constant="16" id="bgY-Jp-p8I"/>
+                            <constraint firstItem="JIR-Ie-6Ku" firstAttribute="trailing" secondItem="uLS-B3-Kku" secondAttribute="trailing" constant="16" id="jT9-Yd-cqd"/>
+                            <constraint firstItem="2oD-PJ-rXU" firstAttribute="top" secondItem="uLS-B3-Kku" secondAttribute="bottom" constant="16" id="rPO-de-bU2"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="JIR-Ie-6Ku"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" systemItem="more" id="9aw-GX-XE4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IaJ-gj-5Vi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="60" y="1503.6945812807883"/>
         </scene>
         <!--Favorites View Controller-->
         <scene sceneID="omO-ir-Fa1">
